# WASM-rust-web-test

./: .gitignore  README.md  run.sh
wasm_pack/: Cargo.toml
wasm_pack/src/: lib.rs
webserver/: Cargo.toml
webserver/src/: main.rs
webserver/static/: index.html  script.js
webserver/static/pkg/: package.json  wasm_pack.d.ts  wasm_pack.js  wasm_pack_bg.wasm  wasm_pack_bg.wasm.d.ts
